--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
 
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'org.apache.commons:commons-lang3:3.1'
+
+    compile 'com.melnykov:floatingactionbutton:1.1.0'
 }
